fin-pro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fin-pro
  namespace: finpulse-dev
  labels:
    app: fin-pro
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fin-pro
  template:
    metadata:
      labels:
        app: fin-pro
    spec:
      volumes:
        - name: bankimpl-cert
          configMap:
            name: giblcert
      containers:
        - name: fin-pro-pod
          image: reg.citytech.global/finpro/finpro:DEV.1006
          ports:
            - containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: 1500G
            requests:
              memory: 500Mi
          volumeMounts:
            - name: bankimpl-cert
              mountPath: /opt/jboss/cert/giblcert.crt
              subPath: giblcert.crt
            - name: elastic-cert
              mountPath: /opt/jboss/cert/elasticcert.crt
              subPath: elasticcert.crt
          livenessProbe:
            httpGet:
              path: /public-endpoints/api/ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 60
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          readinessProbe:
            httpGet:
              path: /public-endpoints/api/ping
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 60
            timeoutSeconds: 60
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 3
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      securityContext: {}
      schedulerName: default-scheduler
      hostAliases:
        - ip: 192.168.214.30
          hostnames:
            - coaext.gibl.com.np
        - ip: 192.168.213.45
          hostnames:
            - giblliveapi.iis
        - ip: 10.9.18.135
          hostnames:
            - uatvkyc.gibl.com.np
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
